[metadata]
name = gribby
version = 0.1.0
description = tbd
long_description = file: README.md
license = MIT
license_file = LICENSE

[options]
python_requires = >= 3.6
package_dir =
    =src
packages = find:

[options.packages.find]
where = src
exclude = tests

[options.entry_points]
console_scripts =
    gribby = gribby.gribby:main
